Fixed minor spacing on menubar

--- a/app/styles/sidebar/_sidebar-actions.scss
+++ b/app/styles/sidebar/_sidebar-actions.scss
@@ -66,7 +66,7 @@
 			> li {
 				margin-top:1em;
 				@include breakpoint(mobile, height){
-					margin-top: 1.5em;
+					margin-top: 2.0em;
 				}
 					> a {
 						width:36px;
